Optimize SSL/https support Load test
